eagle_test/error/break_error.eagle
break;
// expected: [Error at line 1] At 'break': Can't use 'break' keyword outside loop
